--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-treebeard==4.3
 django-widget-tweaks==1.4.5
 factory-boy==2.12.0
 Faker==3.0.0
+gunicorn==20.0.4
 phonenumbers==8.11.1
 Pillow==6.2.1
 pkg-resources==0.0.0
